--- a/static/style.less
+++ b/static/style.less
@@ -31,3 +31,9 @@ iframe.lazytube {
     height: 360px;
     width: 640px;
 }
+iframe.vimeo-embed {
+  border: 0;
+}
+iframe.vine-embed {
+  border: 0;
+}
